# system-designs

./: .gitignore  AGENTS.md  Makefile  README.md
_recipes/: README.md
_recipes/compose/: README.md  kafka-kraft.yml  postgres-with-adminer.yml
_recipes/node/: README.md  env.test.ts  env.ts  healthcheck.test.ts  healthcheck.ts  logger.test.ts  logger.ts  retry.test.ts  retry.ts
_recipes/python/: README.md  env.py  healthcheck.py  logger.py  retry.py  test_env.py  test_healthcheck.py  test_logger.py  test_retry.py
_services/: README.md  docker-compose.yml
_templates/node/: .dockerignore  .env.example  .eslintrc.json  AGENT-PROMPT.md  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  tsconfig.json
_templates/node/notes/: gotchas.md
_templates/node/src/: index.ts
_templates/python/: .dockerignore  .env.example  .gitignore  AGENTS.md  DONE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
_templates/python/docs/diagrams/: .gitignore
_templates/python/src/: main.py
_templates/python/tests/: test_smoke.py
docs/superpowers/plans/: 2026-06-28-agent-enablement.md  2026-06-28-diagram-first-design.md  2026-06-28-learning-aids-starter.md  2026-06-28-recipes-library.md  2026-06-28-side-services-and-top-makefile.md  2026-06-28-system-designs-repo-scaffolding.md  (+1 more)
scripts/: new-project.sh  recipes-test.sh  update-catalog.sh
scripts/tests/: run-tests.sh  test_new_project.sh  test_recipes_runner.sh  test_services_compose.sh  test_shellcheck.sh  test_top_makefile.sh  test_update_catalog.sh
(+6 files in other folders)
